--- a/HaRepacker/Properties/Resources.ko.resx
+++ b/HaRepacker/Properties/Resources.ko.resx
@@ -117,15 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AnimCompatMessage" xml:space="preserve">
-    <value>브라우저나 이미지 뷰어가 너무 오래되어 이 이미지를 볼 수 없습니다. Firefox와 같은 새로운 브라우저를 다운로드해 주세요.</value>
-  </data>
-  <data name="AnimError" xml:space="preserve">
-    <value>애니메이션 빌더에서 오류 발생, 프레임 {0}</value>
-  </data>
-  <data name="ApngFilter" xml:space="preserve">
-    <value>애니메이션 포터블 네트워크 그래픽스 (*.png)</value>
-  </data>
   <data name="EditFoothold" xml:space="preserve">
     <value>발판</value>
   </data>
@@ -134,6 +125,15 @@
   </data>
   <data name="EditSP" xml:space="preserve">
     <value>몬스터 스폰 포인트</value>
+  </data>
+  <data name="FHMapperInvalidInput" xml:space="preserve">
+    <value>입력이 유효하지 않습니다.</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>경고</value>
+  </data>
+  <data name="ApngFilter" xml:space="preserve">
+    <value>애니메이션 포터블 네트워크 그래픽스 (*.png)</value>
   </data>
   <data name="EncTypeGMS" xml:space="preserve">
     <value>글로벌 메이플스토리 (구)</value>
@@ -149,9 +149,6 @@
   </data>
   <data name="Error" xml:space="preserve">
     <value>오류</value>
-  </data>
-  <data name="FHMapperInvalidInput" xml:space="preserve">
-    <value>입력이 유효하지 않습니다.</value>
   </data>
   <data name="FHSettingsForceValue" xml:space="preserve">
     <value>힘 값</value>
@@ -174,14 +171,107 @@
   <data name="FHSettingsYValue" xml:space="preserve">
     <value>Y 값</value>
   </data>
-  <data name="ImagesFilter" xml:space="preserve">
-    <value>이미지 (*.jpg;*.bmp;*.png;*.gif;*.tiff)</value>
+  <data name="MainConfirmAbort" xml:space="preserve">
+    <value>현재 작업을 중단하시겠습니까?</value>
+  </data>
+  <data name="MainConfirmExit" xml:space="preserve">
+    <value>종료하시겠습니까?</value>
+  </data>
+  <data name="MainConfirmRemoveNode" xml:space="preserve">
+    <value>이 노드를 제거하시겠습니까?</value>
+  </data>
+  <data name="MainCouldntOpenWZ" xml:space="preserve">
+    <value>WZ 파일 "{0}"을(를) 열 수 없었습니다</value>
+  </data>
+  <data name="MainHelpOpenFail" xml:space="preserve">
+    <value>도움말 파일({0})을 찾을 수 없어 도움말을 표시할 수 없습니다</value>
+  </data>
+  <data name="MainInvalidFileError" xml:space="preserve">
+    <value>파일 "{0}"이(가) 유효하지 않아 건너뛰게 됩니다. 오류: {1}</value>
+  </data>
+  <data name="MainListWzDetected" xml:space="preserve">
+    <value>{0}에 있는 파일은 List.wz 파일이므로 건너뛰게 됩니다.</value>
+  </data>
+  <data name="MainReloadAll" xml:space="preserve">
+    <value>모든 파일을 다시 로드하시겠습니까?</value>
+  </data>
+  <data name="MainSelectWzFolder" xml:space="preserve">
+    <value>저장할 WZ 파일을 선택해 주세요</value>
+  </data>
+  <data name="MainUnloadAll" xml:space="preserve">
+    <value>모든 파일을 언로드하시겠습니까?</value>
+  </data>
+  <data name="MainUpdateAvailable" xml:space="preserve">
+    <value>{0}</value>
+  </data>
+  <data name="MainUpdateTitle" xml:space="preserve">
+    <value>새 버전</value>
+  </data>
+  <data name="OptionsIndentError" xml:space="preserve">
+    <value>들여쓰기는 0보다 커야 합니다</value>
+  </data>
+  <data name="SaveVersionError" xml:space="preserve">
+    <value>버전은 0보다 커야 합니다</value>
+  </data>
+  <data name="SelectDefaultXmlFolder" xml:space="preserve">
+    <value>기본 XML 폴더 선택</value>
+  </data>
+  <data name="SelectOutApng" xml:space="preserve">
+    <value>애니메이션을 저장할 위치 선택</value>
+  </data>
+  <data name="SelectOutDir" xml:space="preserve">
+    <value>출력 디렉토리 선택</value>
+  </data>
+  <data name="SelectOutWz" xml:space="preserve">
+    <value>파일을 저장할 위치 선택</value>
+  </data>
+  <data name="SelectOutXml" xml:space="preserve">
+    <value>XML을 저장할 위치 선택</value>
+  </data>
+  <data name="SelectWz" xml:space="preserve">
+    <value>WZ/ZLZ 파일 선택</value>
+  </data>
+  <data name="SelectWzImg" xml:space="preserve">
+    <value>IMG 파일 선택</value>
+  </data>
+  <data name="SelectXml" xml:space="preserve">
+    <value>XML 파일 선택</value>
+  </data>
+  <data name="WzFilter" xml:space="preserve">
+    <value>WZ 파일 (*.wz)</value>
+  </data>
+  <data name="WzImgFilter" xml:space="preserve">
+    <value>WZ 이미지 파일 (*.img)</value>
+  </data>
+  <data name="XmlFilter" xml:space="preserve">
+    <value>확장 마크업 언어 (*.xml)</value>
   </data>
   <data name="InteractionWzMapleVersionInfo" xml:space="preserve">
     <value>사용할 WZ 암호화를 선택하세요:</value>
   </data>
   <data name="InteractionWzMapleVersionTitle" xml:space="preserve">
     <value>WZ 암호화</value>
+  </data>
+  <data name="MainErrorImportingWzImageFile" xml:space="preserve">
+    <value>{0}.img 파일을 가져오는 중 오류가 발생했습니다. 올바른 WZ 암호화를 선택하셨습니까?</value>
+  </data>
+  <data name="MainWzExportError" xml:space="preserve">
+    <value>내보내기 디렉토리를 찾을 수 없습니다. 도구 -&gt; 옵션에서 지정해 주세요</value>
+  </data>
+  <data name="MainFileOpenFail" xml:space="preserve">
+    <value>지정된 파일 경로를 열거나 저장할 수 없습니다. 대신 관리자 권한으로 실행해 주세요.</value>
+  </data>
+  <data name="MainAddTabTitle" xml:space="preserve">
+    <value>탭 추가</value>
+  </data>
+  <data name="AnimCompatMessage" xml:space="preserve">
+    <value>브라우저나 이미지 뷰어가 너무 오래되어 이 이미지를 볼 수 없습니다. Firefox와 같은 새로운 브라우저를 다운로드해 주세요.</value>
+  </data>
+  <data name="AnimError" xml:space="preserve">
+    <value>애니메이션 빌더에서 오류 발생, 프레임 {0}</value>
+  </data>
+  <data name="ImagesFilter" xml:space="preserve">
+    <value>이미지 (*.jpg;*.bmp;*.png;*.gif;*.tiff)</value>
   </data>
   <data name="MainAddCanvas" xml:space="preserve">
     <value>캔버스 추가</value>
@@ -225,32 +315,20 @@
   <data name="MainAddSub" xml:space="preserve">
     <value>하위 항목 추가</value>
   </data>
-  <data name="MainAddTabTitle" xml:space="preserve">
-    <value>탭 추가</value>
-  </data>
   <data name="MainAddVec" xml:space="preserve">
     <value>벡터 추가</value>
   </data>
   <data name="MainCannotInsertToNode" xml:space="preserve">
     <value>선택한 객체를 이 유형의 wz 노드에 삽입할 수 없습니다.</value>
   </data>
-  <data name="MainConfirmAbort" xml:space="preserve">
-    <value>현재 작업을 중단하시겠습니까?</value>
-  </data>
   <data name="MainConfirmCopy" xml:space="preserve">
     <value>WZ 노드를 클립보드에 복사하시겠습니까? (경고 - 많은 노드가 선택된 경우 시간이 오래 걸릴 수 있습니다)</value>
-  </data>
-  <data name="MainConfirmExit" xml:space="preserve">
-    <value>종료하시겠습니까?</value>
   </data>
   <data name="MainConfirmPaste" xml:space="preserve">
     <value>클립보드에서 WZ 노드를 붙여넣기하시겠습니까? (경고 - 많은 노드가 붙여넣기되는 경우 시간이 오래 걸릴 수 있습니다)</value>
   </data>
   <data name="MainConfirmRemove" xml:space="preserve">
     <value>이것을 삭제하시겠습니까?</value>
-  </data>
-  <data name="MainConfirmRemoveNode" xml:space="preserve">
-    <value>이 노드를 제거하시겠습니까?</value>
   </data>
   <data name="MainConfirmRename" xml:space="preserve">
     <value>이름 바꾸기</value>
@@ -261,35 +339,11 @@
   <data name="MainCopyDirError" xml:space="preserve">
     <value>디렉토리는 너무 많은 메모리를 필요로 하므로 복사할 수 없습니다</value>
   </data>
-  <data name="MainCouldntOpenWZ" xml:space="preserve">
-    <value>WZ 파일 "{0}"을(를) 열 수 없었습니다</value>
-  </data>
-  <data name="MainErrorImportingWzImageFile" xml:space="preserve">
-    <value>{0}.img 파일을 가져오는 중 오류가 발생했습니다. 올바른 WZ 암호화를 선택하셨습니까?</value>
-  </data>
-  <data name="MainFileOpenFail" xml:space="preserve">
-    <value>지정된 파일 경로를 열거나 저장할 수 없습니다. 대신 관리자 권한으로 실행해 주세요.</value>
-  </data>
-  <data name="MainHelpOpenFail" xml:space="preserve">
-    <value>도움말 파일({0})을 찾을 수 없어 도움말을 표시할 수 없습니다</value>
-  </data>
   <data name="MainImageLoadError" xml:space="preserve">
     <value>이미지를 로드할 수 없었습니다</value>
   </data>
-  <data name="MainInvalidFileError" xml:space="preserve">
-    <value>파일 "{0}"이(가) 유효하지 않아 건너뛰게 됩니다. 오류: {1}</value>
-  </data>
-  <data name="MainListWzDetected" xml:space="preserve">
-    <value>{0}에 있는 파일은 List.wz 파일이므로 건너뛰게 됩니다.</value>
-  </data>
   <data name="MainNodeExists" xml:space="preserve">
     <value>해당 이름의 노드가 이미 존재합니다. 다른 이름을 선택해 주세요</value>
-  </data>
-  <data name="MainReloadAll" xml:space="preserve">
-    <value>모든 파일을 다시 로드하시겠습니까?</value>
-  </data>
-  <data name="MainSelectWzFolder" xml:space="preserve">
-    <value>저장할 WZ 파일을 선택해 주세요</value>
   </data>
   <data name="MainTreeAddDirError" xml:space="preserve">
     <value>이 WzDirectoryProperty를 추가할 부모 WzFile을 찾을 수 없습니다.</value>
@@ -297,71 +351,17 @@
   <data name="MainTreeEnd" xml:space="preserve">
     <value>트리의 끝에 도달했습니다</value>
   </data>
-  <data name="MainUnloadAll" xml:space="preserve">
-    <value>모든 파일을 언로드하시겠습니까?</value>
-  </data>
-  <data name="MainUpdateAvailable" xml:space="preserve">
-    <value>{0}</value>
-  </data>
-  <data name="MainUpdateTitle" xml:space="preserve">
-    <value>새 버전</value>
-  </data>
-  <data name="MainWzExportError" xml:space="preserve">
-    <value>내보내기 디렉토리를 찾을 수 없습니다. 도구 -&gt; 옵션에서 지정해 주세요</value>
-  </data>
   <data name="Mp3Filter" xml:space="preserve">
     <value>MPEG-1 오디오 레이어 3 (*.mp3)</value>
   </data>
-  <data name="OptionsIndentError" xml:space="preserve">
-    <value>들여쓰기는 0보다 커야 합니다</value>
-  </data>
   <data name="ReplaceConfirm" xml:space="preserve">
     <value>노드 "{0}"이(가) 이미 존재합니다. 교체하시겠습니까?</value>
-  </data>
-  <data name="SaveVersionError" xml:space="preserve">
-    <value>버전은 0보다 커야 합니다</value>
-  </data>
-  <data name="SelectDefaultXmlFolder" xml:space="preserve">
-    <value>기본 XML 폴더 선택</value>
   </data>
   <data name="SelectImage" xml:space="preserve">
     <value>이미지 선택</value>
   </data>
   <data name="SelectMp3" xml:space="preserve">
     <value>MP3 파일 선택</value>
-  </data>
-  <data name="SelectOutApng" xml:space="preserve">
-    <value>애니메이션을 저장할 위치 선택</value>
-  </data>
-  <data name="SelectOutDir" xml:space="preserve">
-    <value>출력 디렉토리 선택</value>
-  </data>
-  <data name="SelectOutWz" xml:space="preserve">
-    <value>파일을 저장할 위치 선택</value>
-  </data>
-  <data name="SelectOutXml" xml:space="preserve">
-    <value>XML을 저장할 위치 선택</value>
-  </data>
-  <data name="SelectWz" xml:space="preserve">
-    <value>WZ/ZLZ 파일 선택</value>
-  </data>
-  <data name="SelectWzImg" xml:space="preserve">
-    <value>IMG 파일 선택</value>
-  </data>
-  <data name="SelectXml" xml:space="preserve">
-    <value>XML 파일 선택</value>
-  </data>
-  <data name="Warning" xml:space="preserve">
-    <value>경고</value>
-  </data>
-  <data name="WzFilter" xml:space="preserve">
-    <value>WZ 파일 (*.wz)</value>
-  </data>
-  <data name="WzImgFilter" xml:space="preserve">
-    <value>WZ 이미지 파일 (*.img)</value>
-  </data>
-  <data name="XmlFilter" xml:space="preserve">
-    <value>확장 마크업 언어 (*.xml)</value>
   </data>
   <data name="Subpanel_Loading" xml:space="preserve">
     <value>로딩 중</value>
@@ -413,5 +413,18 @@
   </data>
   <data name="ExecutingAssemblyError_64BitRequired" xml:space="preserve">
     <value>This is only available inder the x64 version of HaRepacker, please get the alternative version.</value>
+  </data>
+  <data name="MainPanel_Animate" xml:space="preserve">
+    <value>이미지 애니메이션</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="animate" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="MainPanel_SaveAnimate" xml:space="preserve">
+    <value>이미지 애니메이션 저장</value>
+  </data>
+  <data name="animate_save" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
   </data>
 </root>
