--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -518,4 +518,16 @@ Click "Yes" to download the new version.</value>
   <data name="ExecutingAssemblyError_64BitRequired" xml:space="preserve">
     <value>This is only available inder the x64 version of HaRepacker, please get the alternative version.</value>
   </data>
+  <data name="MainPanel_Animate" xml:space="preserve">
+    <value>Animate image</value>
+  </data>
+  <data name="animate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\animate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MainPanel_SaveAnimate" xml:space="preserve">
+    <value>Save image animation</value>
+  </data>
+  <data name="animate_save" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\animate_save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
