--- a/HaRepacker/Properties/Resources.ja.resx
+++ b/HaRepacker/Properties/Resources.ja.resx
@@ -229,7 +229,7 @@
     <value>XMLの保存先を選択</value>
   </data>
   <data name="SelectWz" xml:space="preserve">
-    <value>WZ/ZLZ ファイルを選択</value>
+    <value>WZ/IMG/.ms/ZLZ ファイルを選択</value>
   </data>
   <data name="SelectWzImg" xml:space="preserve">
     <value>IMGファイルを選択</value>
