--- a/HaRepacker/Properties/Resources.ko.resx
+++ b/HaRepacker/Properties/Resources.ko.resx
@@ -229,7 +229,7 @@
     <value>XML을 저장할 위치 선택</value>
   </data>
   <data name="SelectWz" xml:space="preserve">
-    <value>WZ/ZLZ 파일 선택</value>
+    <value>WZ/IMG/.ms/ZLZ 파일 선택</value>
   </data>
   <data name="SelectWzImg" xml:space="preserve">
     <value>IMG 파일 선택</value>
