[HaRepacker] Save as .ms file from WzFile

--- a/HaRepacker/Properties/Resources.ko.resx
+++ b/HaRepacker/Properties/Resources.ko.resx
@@ -427,4 +427,7 @@
   <data name="animate_save" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
+  <data name="MsFilter" xml:space="preserve">
+    <value>MS 파일 (*.ms)</value>
+  </data>
 </root>
