--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -530,4 +530,7 @@ Click "Yes" to download the new version.</value>
   <data name="animate_save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\animate_save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MsFilter" xml:space="preserve">
+    <value>MS File (*.ms)</value>
+  </data>
 </root>
